Fixed accordion menu not applying max-width. Fixed image to always be aligned center.

--- a/main.css
+++ b/main.css
@@ -41,12 +41,14 @@ body {
 .card {
   z-index: 1;
   background: var(--divider);
-  max-width: 78rem;
+  /* max-width: 78rem; */
+  width: min(95vw, 78rem);
   min-height: 42rem;
   border-radius: 2rem;
   margin: 5rem 1.6rem;
   display: flex;
   flex-direction: row;
+  justify-content: start;
 }
 
 @media (max-width: 768px) {
@@ -55,32 +57,34 @@ body {
     text-align: center;
     height: fit-content;
     /* max-width: 35rem; */
-    width: min(90vw, 35rem);
+    width: min(87vw, 35rem);
   }
 }
 
 .art {
   position: relative;
+  align-self: center;
   display: grid;
-  left: -7rem;
-  width: 50%;
+  left: -6.5rem;
 }
 
 @media (max-width: 768px) { 
   .art {
     position: relative;
+    width: 75%;
     height: auto;
-    top: auto;
     left: auto;
   }
 }
 
 .accordion-menu {
-  flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 5rem 9rem 5rem 2rem;
+  margin-right: auto;
   text-align: start;
+  width: 100%;
+  max-width: 31.5rem;
+  padding: 5rem 2rem;
 }
 
 .accordion-menu h1 {
@@ -91,6 +95,7 @@ body {
 
 @media (max-width: 768px) {
   .accordion-menu {
+    max-width: 100%;
     padding: 4rem 2rem;
   }
 
@@ -116,6 +121,10 @@ body {
   font-weight: 700;
 }
 
+.label img {
+  margin-left: 0.5rem;
+}
+
 .label:hover {
   cursor: pointer;
   color: var(--primaryText2);
@@ -125,6 +134,10 @@ body {
   margin-top: 1rem;
   display: none;
   color: var(--neutralText2);
+}
+
+.content p {
+  width: 90%;
 }
 
 .divider {
